# aur_helper

./: .gitignore  Cargo.toml  README.md  aur_helper.nix
completion/: _aur_helper  aur_helper.bash
dir_func/: Cargo.toml
dir_func/src/: lib.rs
src/: cli.rs  dir_func.rs  main.rs  mini_tokio.rs
