[package]
name = "aur_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive", "string"] }
raur = "7.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
