[package]
name = "aur_helper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive", "string", "env"] }
raur = "7.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
clap = { version = "4.4.0", features = ["derive", "string", "env"] }
clap_complete = "4.4.2"
