[workspace]

[workspace.package]
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[workspace.dependencies]
clap = { version = "4.4.0", features = ["derive", "string", "env"] }
raur = "7.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package]
name = "aur_helper"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
raur.workspace = true
tokio.workspace = true
dir_func =  { path = "./dir_func" }

[build-dependencies]
clap = { version = "4.4.0", features = ["derive", "string", "env"] }
clap_complete = "4.4.2"
